# esc_play

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  component_manager.h  entity_manager.cpp  entity_manager.h  force_component.h  gravity_system.cpp  gravity_system.h  position_component.cpp  position_component.h  position_manager.cpp
ecs/: CMakeLists.txt
ecs/include/: force_component.h
ecs/src/: entity_manager.cpp
ecs/test/: CMakeLists.txt
game/: CMakeLists.txt  game_test.cpp  game_tests.h  main.cpp  shader.cpp  shader.h
lib/: CMakeLists.txt
lib/ecs/include/: abstract_system.h
lib/ecs/src/: gravity_system.cpp
lib/ecs/test/: test_component_manager.cpp  test_position_component.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
test/: CMakeLists.txt  test_component_manager.cpp  test_entity_manager.cpp  test_gravity_system.cpp  test_position_component.cpp
